RESOLVED FIXED77587
WorkerScriptController::evaluate() should not return anything
https://bugs.webkit.org/show_bug.cgi?id=77587
Summary WorkerScriptController::evaluate() should not return anything
Benjamin Poulain
Reported 2012-02-01 17:31:59 PST
We discard the return value of Workers. It is confusing for WorkerScriptController::evaluate() to return a value.
Attachments
Patch (6.71 KB, patch)
2012-02-01 17:37 PST, Benjamin Poulain
abarth: review+
Benjamin Poulain
Comment 1 2012-02-01 17:37:11 PST
Benjamin Poulain
Comment 2 2012-02-01 17:38:00 PST
Not for review just yet, I need to see how the Chromium V8 bots like this.
Adam Barth
Comment 3 2012-02-01 18:44:38 PST
Comment on attachment 125053 [details] Patch You said this wasn't for review, but this seems non-controversial.
Benjamin Poulain
Comment 4 2012-02-01 19:12:21 PST
(In reply to comment #3) > You said this wasn't for review, but this seems non-controversial. Yep, I r?ed later when I was sure that builds for Chromium. I should have commented. Thanks for the review.
Benjamin Poulain
Comment 5 2012-02-01 20:12:26 PST
Note You need to log in before you can comment on or make changes to this bug.