WorkerScriptController::evaluate() should not return anything https://bugs.webkit.org/show_bug.cgi?id=77587

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-02-01
Reviewed by Adam Barth.

Remove the return value from WorkerScriptController as it is
(and should be) unused.

* bindings/js/WorkerScriptController.cpp:
(WebCore::WorkerScriptController::evaluate):
* bindings/js/WorkerScriptController.h:
(WorkerScriptController):
* bindings/v8/WorkerScriptController.cpp:
(WebCore::WorkerScriptController::evaluate):
* bindings/v8/WorkerScriptController.h:
(WorkerScriptController):


Canonical link: https://commits.webkit.org/94473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106529 268f45cc-cd09-0410-ab3c-d52691b4dbfc